--- a/components/page/Widget.css
+++ b/components/page/Widget.css
@@ -1,12 +1,12 @@
 .widget {
     display: flex;
     flex-direction: column;
-    flex: 1;
     background-color: #aeaeae;
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
     border: 1px solid #000000;
+    align-items: center;
 }
 
 .widget:hover {
