--- a/components/player/Player.css
+++ b/components/player/Player.css
@@ -1,5 +1,8 @@
 .player {
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   bottom: 0;
   left: 0;
   width: 100%;
